# safety-classifier-transfer-risk

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SPEC.md  justfile  pyproject.toml
.github/workflows/: ci.yml  docs.yml
conf/: logging.yml
conf/base/: catalog.yml  globals.yml  mlflow.yml  parameters.yml  parameters_attacks.yml  parameters_data.yml  parameters_models.yml  parameters_risk.yml  parameters_similarity.yml  parameters_transfer.yml
conf/cloud/: globals.yml  parameters_attacks.yml
conf/thin/: catalog.yml  globals.yml  parameters_attacks.yml  parameters_models.yml  parameters_similarity.yml
conf/viz/: parameters_attacks.yml
docs/: _quarto.yml  index.qmd  pipeline.qmd  references.bib  styles.css
docs/pipeline-viz/: 404.html
docs/pipeline-viz/.vite/: manifest.json
docs/pipeline-viz/api/: deploy-viz-metadata  main  run-status
docs/pipeline-viz/api/nodes/: 0023e818  0044bd42  0044be8e  00495680  00512c1a  006480d5  006ae743  008851b9  00a19083  00e6ce93  01074fe7  011373a7  01147fc5  011b55ae  012371fe  012dfd10  0137bda5  014374dc  014ac4b5  015f7736  0179364f  0188eaad  0195e29a  01a9c7b5  01c86467  01d72ce9  01d86d6c  01e36453  01f8658f  021a662d  021aa2be  02203045  02410b8f  02576b8e  025b3f04  025cbb13  026b6318  0271399e  027786e4  027b6cdc  (+5090 more)
docs/pipeline-viz/api/pipelines/: __default__  attacks  data  downstream  models  reporting  risk  similarity  smoke  stage  transfer
docs/pipeline-viz/assets/: arc-dvh2Wzkk.js  architectureDiagram-3BPJPVTR-DstirTpJ.js  blockDiagram-GPEHLZMM-BgiqMvrb.js  c4Diagram-AAUBKEIU-B0FiUq7E.js  channel-BQtzkx3h.js  chunk-2J33WTMH-CQfiN1-I.js  chunk-4BX2VUAB-Dh-_hc1M.js  chunk-55IACEB6-B4oY_jC2.js  chunk-727SXJPM-CV30fyPo.js  chunk-AQP2D5EJ-aQWI_d4d.js  chunk-FMBD7UC4-B_ffZBga.js  chunk-ND2GUHAM-DpUR4Nwx.js  chunk-QZHKN3VN-DsKqsScw.js  classDiagram-v2-Q7XG4LA2-BNMoCDcL.js  cose-bilkent-S5V4N54A-DkUU8atr.js  dagre-BM42HDAG-BfSsJRUV.js  diagram-2AECGRRQ-DxrrBzuk.js  diagram-5GNKFQAL-BaA4ymRa.js  diagram-KO2AKTUF-B5STynN2.js  diagram-LMA3HP47-BxRAFVjC.js  diagram-OG6HWLK6-DFzI_8XG.js  erDiagram-TEJ5UH35-BdoAmzIu.js  flowDiagram-I6XJVG4X-CeUAEWeX.js  ganttDiagram-6RSMTGT7-CxhEfuI4.js  gitGraphDiagram-PVQCEYII-Dk2Fir2A.js  infoDiagram-5YYISTIA-C18S4RSv.js  ishikawaDiagram-YF4QCWOH-BeBL1w2Q.js  journeyDiagram-JHISSGLW-CLQwNAzI.js  kanban-definition-UN3LZRKU-aIol9zxJ.js  linear-Cub2LBS_.js  mindmap-definition-RKZ34NQL-BJgmAPxD.js  pieDiagram-4H26LBE5-BFw3J0BZ.js  quadrantDiagram-W4KKPZXB-DEDzIv8F.js  requirementDiagram-4Y6WPE33-B1Bgoh8_.js  sankeyDiagram-5OEKKPKP-DDCa45LP.js  sequenceDiagram-3UESZ5HK-Bt33cVE9.js  stateDiagram-AJRCARHV-BJCKhGoz.js  stateDiagram-v2-BHNVJYJU-vkipA7qR.js  timeline-definition-PNZ67QCA-B0etxPhK.js  vennDiagram-CIIHVFJN-c8r5RlEb.js  (+3 more)
docs/posts/: 2026-06-16-why-transferability-risk.qmd  2026-06-17-transferability-results.qmd  index.qmd
infra/: README.md  cloud_run.sh  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf  versions.tf
scripts/: run_textattack.py
src/transfer_risk/: __init__.py  __main__.py  devices.py  hooks.py  modeling.py  pipeline_registry.py  runner.py  settings.py
src/transfer_risk/datasets/: __init__.py  _fsspec_model_dir.py  hub_model_dataset.py  onnx_model_dataset.py  surrogate_model_dataset.py
src/transfer_risk/lib/: __init__.py  ablation.py  cka.py  dbs.py  remote.py  seeds.py  sweep.py  thresholds.py  transfer.py
src/transfer_risk/pipelines/: __init__.py  _dynamic.py
src/transfer_risk/pipelines/attacks/: __init__.py  nodes.py  pipeline.py  runner.py
src/transfer_risk/pipelines/data/: __init__.py  harmonize.py  nodes.py  pipeline.py
src/transfer_risk/pipelines/models/: __init__.py  bilstm.py  nodes.py  pipeline.py  registry.py  training.py
src/transfer_risk/pipelines/reporting/: __init__.py  nodes.py  pipeline.py
src/transfer_risk/pipelines/risk/: __init__.py  nodes.py  pipeline.py
src/transfer_risk/pipelines/similarity/: __init__.py  nodes.py  pipeline.py
src/transfer_risk/pipelines/smoke/: __init__.py  nodes.py  pipeline.py
src/transfer_risk/pipelines/transfer/: __init__.py  nodes.py  pipeline.py
src/transfer_risk/scripts/: __init__.py  export_onnx.py  fetch_assets.py
tests/: conftest.py  test_runner.py
tests/datasets/: test_onnx_model_dataset.py  test_surrogate_model_dataset.py
tests/lib/: test_ablation.py  test_cka.py  test_dbs.py  test_remote.py  test_seeds.py  test_sweep.py  test_thresholds.py  test_transfer.py
tests/pipelines/: test_attacks_integration.py  test_attacks_sharding.py  test_attacks_victim_routing.py  test_cloud_config.py  test_data_harmonize.py  test_models_helpers.py  test_pipeline_registry.py
